# desafio-data-eng

./: .dockerignore  .gitignore  Dockerfile  Makefile  README.md  docker-compose.yml  flake.nix  main.py  pyproject.toml  requirements.txt
database/: create.sql  init.sql
dbt_project/models/: desafio.sql
desafio_data_eng/: settings.py
pipelines/: settings.py
pipelines/terceirizados/: constants.py  data.py  db.py
scripts/: dbt_run.sh
